--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "codegen": "npx graphql-codegen --config codegen.yml"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.4",
     "@aws-amplify/api-graphql": "^4.7.9",
     "@expo/vector-icons": "^14.0.2",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
+    "apollo-server": "^3.13.0",
     "aws-amplify": "^6.13.5",
     "expo": "~52.0.28",
     "expo-blur": "~14.0.3",
@@ -31,6 +34,7 @@
     "expo-symbols": "~0.2.1",
     "expo-system-ui": "~4.0.7",
     "expo-web-browser": "~14.0.2",
+    "graphql": "^16.10.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
