--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "apollo-server": "^3.13.0",
     "aws-amplify": "^6.13.5",
     "expo": "~52.0.28",
+    "expo-auth-session": "^6.0.3",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.5",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
+    "expo-random": "^14.0.1",
     "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
@@ -44,7 +46,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
+    "react-native-webview": "^13.12.5",
     "styled-components": "^6.1.15"
   },
   "devDependencies": {
